// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MsBingCapi's pageLoad destination action: all fields 1`] = `
Object {
  "data": Array [
    Object {
      "eventId": "O)Dl2[lI&A",
      "eventName": "O)Dl2[lI&A",
      "eventSourceUrl": "O)Dl2[lI&A",
      "eventTime": "O)Dl2[lI&A",
      "eventType": "pageLoad",
      "keywords": "O)Dl2[lI&A",
      "pageLoadId": "O)Dl2[lI&A",
      "pageTitle": "O)Dl2[lI&A",
      "referrerUrl": "O)Dl2[lI&A",
      "userData": Object {},
    },
  ],
}
`;

exports[`Testing snapshot for MsBingCapi's pageLoad destination action: required fields 1`] = `
Object {
  "data": Array [
    Object {
      "eventSourceUrl": "O)Dl2[lI&A",
      "eventTime": "O)Dl2[lI&A",
      "eventType": "pageLoad",
      "userData": Object {},
    },
  ],
}
`;
